      compressed with lzma.
  * checks/etcfiles.desc:
    + [RA] Remove unused Needs-Info: etcfiles.  Thanks, Raphael Geissert.
  * checks/fields{,.desc}:
    + [RA] Remove package-uses-breaks.  dpkg in stable now supports it.
      Thanks, Julian Andres Klode.  (Closes: #522660)
    + [RA] Fix Needs-Info.  Thanks, Raphael Geissert.
  * checks/files:
    + [ADB] Anchor the regular expression for the "gz-file-not-gzip" tag so
      that files with names that contain ".gz" but do not end in that string
      are not flagged.  Patch by Raphael Geissert.  (Closes: #523352)
  * checks/menu-format{,.desc}:
    + [RA] Remove desktop-mimetype-without-update-call.  This is now
      handled by triggers.  Thanks, Chow Loong Jin.  (Closes: #525133)
  * checks/patch-systems.desc:
    + [RA] Mention that empty dpatch patch lists or quilt series files
      will disappear in a non-native source package and hence produce the
      warning about a missing file.  (Closes: #525005)
  * checks/scripts{,.desc}:
    + [RA] Handle command delimiters, $() expressions, and braces and
      parentheses in the checks for correct diversion handling.  Patch
      from Raphael Geissert.  (Closes: #523708)
    + [RA] Clarify the php-script-but-no-phpX-cli-dep description to
      explain why it warns about a php4-cli dependency.  (Closes: #525484)
    + [RA] Add jruby1.2 and allow an unversioned jruby reference.  Thanks,
      Sebastien Delafond.  (Closes: #523001)
  * checks/shared-libs{,.desc}:
    + [RA] Strip trailing slashes from the libdir path in *.la files
      before checking it for correctness.  Thanks, Patrick Matthäi.
      (Closes: #524228)
    + [RA] Special-case *.la files for Python modules installed in
      /usr/share/pyshared, since they're moved during install.  Thanks,
      Jonas Smedegaard.  (Closes: #522623)
    + [RA] Requires unpack level 2 to read the *.la files.
  * checks/standards-version.desc: